assets/scss/main.scss
/* ... */
@for $i from 1 through 100 {
  $x: random();
  $y: random();

  $drop-width: 5px + random(11);
  $drop-stretch: 0.7+ (random() * 0.5);
  $drop-delay: (random() * 2.5) + 1;
  $drop-height: $drop-width * $drop-stretch;

  .rainfall__raindrop:nth-child(#{$i}) {
    left: $x * 100vw;
    top: $y * 100vh;

    width: $drop-width;
    height: $drop-height;
    background-position: percentage($x) percentage($y);
    animation: #{$drop-delay}s rainfall__falling 0.3s ease-in infinite;
  }

  .rainfall__border:nth-child(#{$i}) {
    left: $x * 100vw;
    top: $y * 100vh;

    width: $drop-width - 4;
    height: $drop-height;
    animation: #{$drop-delay}s rainfall__falling 0.3s ease-in infinite;
  }
}

@keyframes rainfall__falling {
  from {
  }
  to {
    transform: translateY(500px);
  }
}

@media (prefers-reduced-motion: reduce) {
  .borders,
  .drops {
    display: none;
  }
}

